--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -51,6 +51,13 @@ jobs:
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.TOKEN }}
+
+      - name: Delete workflow runs
+        uses: GitRML/delete-workflow-runs@main
+        with:
+            repository: ${{ github.repository }}
+            retain_days: ${{ github.event.inputs.days }}
+            keep_minimum_runs: ${{ github.event.inputs.minimum_runs }}
           
 #      - name: WeChat notification #用于微信推送通知（如有需要删除行头注释）
 #        run: curl https://sc.ftqq.com/${{ secrets.ServerChan }}.send?text=${{ env.FILE_NAME }}AdBlock规则已更新
