--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -48,9 +48,10 @@ jobs:
             fi
             
       - name: GitHub Push
-        uses: ad-m/github-push-action@v0.6.0
+        uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
 
       - name: Delete workflow runs
         uses: GitRML/delete-workflow-runs@main
