--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-  - cron: '0 */4 * * *'
+  - cron: 0 23 * * *
   workflow_dispatch:
     inputs:
       days:
@@ -14,6 +14,9 @@ on:
         description: 'The minimum runs to keep for each workflow.'
         required: true
         default: 6
+
+env:
+  TZ: Asia/Shanghai
 
 jobs:
   Update_Kexts_for_macOS:
@@ -30,6 +33,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          sudo timedatectl set-timezone "$TZ"
           python -m pip install --upgrade pip
           pip install --pre gql[all]
 
@@ -37,17 +41,21 @@ jobs:
         run: python downloader.py ${{ secrets.TOKEN }}
 
       - name: Commit Changes
+        id: commit
         run: |
           if [ -z "$(git status --porcelain)" ]; then 
               exit 0
-            else 
-              git add .
-              git config --local user.email "217heidai@gmail.com"
-              git config --local user.name "217heidai"
-              git commit -m "Updated at $(date)" -a
-            fi
+          else
+            echo "::set-output name=status::success"
+            git add .
+            git config --local user.email "217heidai@gmail.com"
+            git config --local user.name "217heidai"
+            git commit -m "Updated at $(date)" -a
+          fi
             
       - name: GitHub Push
+        id: push
+        if: steps.commit.outputs.status == 'success' && !cancelled()
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -60,5 +68,6 @@ jobs:
             retain_days: ${{ github.event.inputs.days }}
             keep_minimum_runs: ${{ github.event.inputs.minimum_runs }}
           
-#      - name: WeChat notification #用于微信推送通知（如有需要删除行头注释）
-#        run: curl https://sc.ftqq.com/${{ secrets.ServerChan }}.send?text=${{ env.FILE_NAME }}AdBlock规则已更新
+      - name: WeChat notification
+        if: steps.push.outputs.status == 'success' && !cancelled()
+        run: curl https://sc.ftqq.com/${{ secrets.SERVERCHAN }}.send?text=OpenSSL_${{env.VERSION}}_${{env.ANDROID_ABI}}编译完成
