本地不再缓存，直接从原项目release下载

--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           sudo timedatectl set-timezone "$TZ"
           python -m pip install --upgrade pip
-          pip install --pre gql[all]
+          pip install gql[all]
 
       - name: Download Kexts
         run: python downloader.py ${{ secrets.GITHUB_TOKEN }}
