--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -25,12 +25,12 @@ jobs:
         run: |
           sudo timedatectl set-timezone "$TZ"
           python -m pip install --upgrade pip
-          pip install gql[all]
+          pip install -r requirements.txt
 
       - name: Download Kexts
         id: update
         run: |
-          python downloader.py ${{ secrets.GITHUB_TOKEN }}
+          python downloader.py
           echo "message=$(date)" >> $GITHUB_OUTPUT
 
       - name: Commit Changes
